# Copyright (c) Microsoft Corporation.
# Licensed under the MIT license.
# SPDX-License-Identifier: MIT

[package]
name = "mqtt-provider-proxy"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
async-trait = { workspace = true }
crossbeam = { workspace = true }
freyja-build-common = { workspace = true }
freyja-common = { workspace = true }
freyja-contracts = { workspace = true }
log = { workspace = true }
paho-mqtt = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true, features = ["v4"]}

[dev-dependencies]

[build-dependencies]
freyja-build-common = { workspace = true }