# Copyright (c) Microsoft Corporation.
# Licensed under the MIT license.
# SPDX-License-Identifier: MIT

[package]
name = "managed-subscribe-data-adapter"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
async-trait = { workspace = true }
core-protobuf-data-access  = { workspace = true }
freyja-build-common = { workspace = true }
freyja-common = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
tonic = { workspace = true }

[dev-dependencies]

[build-dependencies]
freyja-build-common = { workspace = true }